<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#D2F1EE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/wellness_center_header"
                android:src="@drawable/img_3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wellness_center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:shadowColor="#80000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
           android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_and_exercise_recommendations"
        android:textSize="14sp"
        android:textStyle="bold"
android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/dash"
                        android:clickable="true"
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/dash"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/dash_diabetes"
                        android:layout_marginEnd="8dp"
                        android:focusable="true" />



                    <ImageView
                        android:id="@+id/exercise"
                        android:clickable="true"
                        android:layout_width="120dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/exercise"
                        android:contentDescription="@string/recommended_exercises"
                        android:scaleType="centerCrop"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:focusable="true" />

                    <ImageView
                        android:id="@+id/meal_plan"
                        android:clickable="true"
                        android:layout_width="160dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="25dp"
                        android:contentDescription="@string/healthy_meal_recommendation"
                        android:src="@drawable/meal_plan"
                        android:scaleType="centerCrop"
                        android:focusable="true" />
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health_insights"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/latest"
                        android:clickable="true"
                        android:layout_width="170dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/latest"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/latest_updates"
                        android:layout_marginEnd="8dp"
                        android:focusable="true" />

                    <ImageView
                        android:id="@+id/smoking"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:contentDescription="@string/deadly_trio"
                        android:paddingStart="25dp"
                        android:paddingEnd="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/smoking" />

                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggested_consultants"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:clickable="true"
                        android:id="@+id/consultant3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/cons3"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/consultant_no3_suggestion"
                        android:layout_marginEnd="14dp"
                        android:focusable="true" />
                    <ImageView
                        android:clickable="true"
                        android:id="@+id/consultant2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/cons2"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/consultant_suggestion"
                        android:layout_marginEnd="14dp"
                        android:focusable="true" />
                    <ImageView
                        android:id="@+id/consultant1"
                        android:clickable="true"
                        android:layout_marginTop="25dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="14dp"
                        android:src="@drawable/cons1"
                        android:contentDescription="@string/consultant_no3_suggestion"
                        android:scaleType="centerCrop"
                        android:focusable="true" />

                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supportive_communities"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idf"
                        android:clickable="true"
                        android:layout_width="220dp"
                        android:layout_height="70dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/idf"
                        android:contentDescription="@string/idf"
                        android:scaleType="centerCrop"
                        android:focusable="true" />
                    <ImageView
                        android:id="@+id/hd"
                        android:clickable="true"
                        android:layout_width="220dp"
                        android:layout_height="80dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/hd"
                        android:contentDescription="@string/hfd"
                        android:scaleType="centerCrop"
                        android:focusable="true" />
                    <ImageView
                        android:id="@+id/royal"
                        android:clickable="true"
                        android:layout_width="170dp"
                        android:layout_height="90dp"
                        android:layout_margin="20dp"
                        android:src="@drawable/royal"
                        android:contentDescription="@string/royal"
                        android:scaleType="centerCrop"
                        android:focusable="true" />
                </LinearLayout>
            </HorizontalScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>